--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^2.1.1"
   },
-  "homepage": "http://dev.cortneysmith.org"
+  "homepage": "https://cortneysmith.github.io/cortneysmith.org/"
 }
